# codeautopsy

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.claude/: settings.json
.github/workflows/: autoheal.yml  ci.yml  deploy-cloud-run.yml  docker-publish.yml  pages.yml  prognosis.yml  publish-pypi.yml
codeautopsy/: __init__.py  config.py  otel.py
codeautopsy/accounts/: __init__.py  auth.py  models.py  security.py  store.py  store_postgres.py
codeautopsy/autoheal/: __init__.py  core.py  models.py
codeautopsy/cli/: __init__.py  main.py
codeautopsy/enricher/: __init__.py  core.py  incidents.py
codeautopsy/fixbot/: __init__.py  core.py  models.py
codeautopsy/prognosis/: core.py  models.py
codeautopsy/provenance/: __init__.py  indexer.py  models.py  service.py  store.py  store_postgres.py
codeautopsy/recorder/: __init__.py  commit_indexer.py  hooks.py  pending.py  risk.py
codeautopsy/reliability/: __init__.py  core.py  models.py
codeautopsy/sample_app/: __init__.py  main.py
dashboards/: codeautopsy-blast-radius.json
docs/: app.html  demo.html  index.html
docs/assets/: README.md
docs/dev/: README.md  codebase-map.md  operations.md
scripts/: day0_smoke.py  report_heal.py  seed_demo_provenance.py
tests/: test_accounts.py  test_accounts_postgres.py  test_autoheal.py  test_cli.py  test_config.py  test_enricher.py  test_fixbot.py  test_prognosis.py  test_provenance.py  test_provenance_postgres.py  test_recorder.py  test_reliability.py  test_sample_app.py  test_service.py  test_v1_api.py
