[project]
name = "codeautopsy"
version = "0.1.0"
description = "Trace a production bug back through time to the exact AI-agent decision that caused it."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "CodeAutopsy" }]

dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "httpx>=0.27",
    "typer>=0.12",
    "rich>=13.7",
    "opentelemetry-api>=1.25",
    "opentelemetry-sdk>=1.25",
    "opentelemetry-exporter-otlp-proto-http>=1.25",
    "opentelemetry-instrumentation-fastapi>=0.46b0",
    "psycopg[binary]>=3.2",
]

[project.optional-dependencies]
fixbot = ["groq>=0.11"]
dev = [
    "pytest>=8.1",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
codeautopsy = "codeautopsy.cli.main:app"
codeautopsy-provenance = "codeautopsy.provenance.service:run"
codeautopsy-sample = "codeautopsy.sample_app.main:run"
codeautopsy-hook = "codeautopsy.recorder.hooks:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["codeautopsy"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# B008: Typer/FastAPI require calling Option()/Depends() in argument defaults — not a real bug.
ignore = ["B008"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501"]    # test literals (JSON fixtures, assertion strings) read better unwrapped
"scripts/*" = ["E501"]  # standalone demo scripts — narrative print()s read better unwrapped

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["codeautopsy"]
# Only exercised when DATABASE_URL points at a real Postgres (CI's service container, or a
# local one) — omitted from the gate so `pytest` without Postgres doesn't fail on coverage.
# Correctness is verified by tests/test_provenance_postgres.py whenever DATABASE_URL is set.
omit = ["codeautopsy/provenance/store_postgres.py"]

[tool.coverage.report]
fail_under = 95
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]
